--- a/example-apps/chatbot-rag-app/env.example
+++ b/example-apps/chatbot-rag-app/env.example
@@ -6,8 +6,10 @@ FLASK_APP=api/app.py
 PYTHONUNBUFFERED=1
 
 # How you connect to Elasticsearch: change details to your instance
-# This defaults to a Elastic Stack accessible via localhost. When this is
-# running inside Kubernetes, update to http://elasticsearch:9200 or similar.
+# This defaults to a Elastic Stack accessible via localhost.
+#
+# When running inside Kubernetes, set to http://elasticsearch.default.svc:9200
+# or similar.
 ELASTICSEARCH_URL=http://localhost:9200
 ELASTICSEARCH_USER=elastic
 ELASTICSEARCH_PASSWORD=elastic
@@ -71,7 +73,9 @@ OTEL_SDK_DISABLED=true
 OTEL_SERVICE_NAME=chatbot-rag-app
 
 # Default to send logs, traces and metrics to an Elastic APM server accessible
-# via localhost. If using running inside k8s, update to http://apm-server:8200
+# via localhost.
+#
+# When running inside Kubernetes, set to http://elasticsearch.default.svc:9200
 # or similar.
 OTEL_EXPORTER_OTLP_ENDPOINT=http://localhost:8200
 OTEL_EXPORTER_OTLP_PROTOCOL=http/protobuf
