--- a/example-apps/chatbot-rag-app/requirements.txt
+++ b/example-apps/chatbot-rag-app/requirements.txt
@@ -529,4 +529,4 @@ opentelemetry-instrumentation-sqlalchemy==0.52b0
 opentelemetry-instrumentation-system-metrics==0.52b0
 opentelemetry-instrumentation-tortoiseorm==0.52b0
 opentelemetry-instrumentation-urllib3==0.52b0
-elastic-opentelemetry-instrumentation-openai
+elastic-opentelemetry-instrumentation-openai==0.6.1
