--- a/example-apps/chatbot-rag-app/requirements.txt
+++ b/example-apps/chatbot-rag-app/requirements.txt
@@ -4,29 +4,27 @@
 #
 #    pip-compile
 #
-aiohappyeyeballs==2.4.6
+aiohappyeyeballs==2.6.1
     # via aiohttp
-aiohttp==3.11.13
-    # via
-    #   langchain
-    #   langchain-community
+aiohttp==3.11.14
+    # via langchain-community
 aiosignal==1.3.2
     # via aiohttp
 annotated-types==0.7.0
     # via pydantic
-anyio==4.8.0
+anyio==4.9.0
     # via
     #   httpx
     #   openai
-attrs==25.1.0
+attrs==25.3.0
     # via aiohttp
 blinker==1.9.0
     # via flask
-boto3==1.37.0
+boto3==1.37.13
     # via
     #   langchain-aws
     #   langtrace-python-sdk
-botocore==1.37.0
+botocore==1.37.13
     # via
     #   boto3
     #   s3transfer
@@ -43,7 +41,7 @@ charset-normalizer==3.4.1
     # via requests
 click==8.1.8
     # via flask
-cohere==5.13.12
+cohere==5.14.0
     # via langchain-cohere
 colorama==0.4.6
     # via
@@ -62,17 +60,17 @@ distro==1.9.0
     # via openai
 docstring-parser==0.16
     # via google-cloud-aiplatform
-elastic-opentelemetry==0.7.0
+elastic-opentelemetry==0.8.0
     # via -r requirements.in
-elastic-transport==8.17.0
+elastic-transport==8.17.1
     # via elasticsearch
-elasticsearch[vectorstore-mmr]==8.17.1
+elasticsearch[vectorstore-mmr]==8.17.2
     # via
     #   -r requirements.in
     #   langchain-elasticsearch
 fastavro==1.10.0
     # via cohere
-filelock==3.17.0
+filelock==3.18.0
     # via
     #   huggingface-hub
     #   transformers
@@ -86,11 +84,11 @@ frozenlist==1.5.0
     # via
     #   aiohttp
     #   aiosignal
-fsspec==2025.2.0
+fsspec==2025.3.0
     # via
     #   huggingface-hub
     #   langtrace-python-sdk
-google-api-core[grpc]==2.24.1
+google-api-core[grpc]==2.24.2
     # via
     #   google-cloud-aiplatform
     #   google-cloud-bigquery
@@ -105,15 +103,15 @@ google-auth==2.38.0
     #   google-cloud-core
     #   google-cloud-resource-manager
     #   google-cloud-storage
-google-cloud-aiplatform==1.81.0
+google-cloud-aiplatform==1.84.0
     # via langchain-google-vertexai
-google-cloud-bigquery==3.29.0
+google-cloud-bigquery==3.30.0
     # via google-cloud-aiplatform
-google-cloud-core==2.4.2
+google-cloud-core==2.4.3
     # via
     #   google-cloud-bigquery
     #   google-cloud-storage
-google-cloud-resource-manager==1.14.1
+google-cloud-resource-manager==1.14.2
     # via google-cloud-aiplatform
 google-cloud-storage==2.19.0
     # via
@@ -127,23 +125,25 @@ google-resumable-media==2.7.2
     # via
     #   google-cloud-bigquery
     #   google-cloud-storage
-googleapis-common-protos[grpc]==1.68.0
+googleapis-common-protos[grpc]==1.69.2
     # via
     #   google-api-core
     #   grpc-google-iam-v1
     #   grpcio-status
     #   opentelemetry-exporter-otlp-proto-grpc
     #   opentelemetry-exporter-otlp-proto-http
-grpc-google-iam-v1==0.14.0
+greenlet==3.1.1
+    # via sqlalchemy
+grpc-google-iam-v1==0.14.2
     # via google-cloud-resource-manager
-grpcio==1.70.0
+grpcio==1.71.0
     # via
     #   google-api-core
     #   googleapis-common-protos
     #   grpc-google-iam-v1
     #   grpcio-status
     #   opentelemetry-exporter-otlp-proto-grpc
-grpcio-status==1.70.0
+grpcio-status==1.71.0
     # via google-api-core
 h11==0.14.0
     # via httpcore
@@ -164,7 +164,7 @@ httpx-sse==0.4.0
     #   langchain-community
     #   langchain-google-vertexai
     #   langchain-mistralai
-huggingface-hub==0.29.1
+huggingface-hub==0.29.3
     # via
     #   tokenizers
     #   transformers
@@ -174,13 +174,13 @@ idna==3.10
     #   httpx
     #   requests
     #   yarl
-importlib-metadata==8.5.0
+importlib-metadata==8.6.1
     # via opentelemetry-api
 itsdangerous==2.2.0
     # via flask
-jinja2==3.1.5
+jinja2==3.1.6
     # via flask
-jiter==0.8.2
+jiter==0.9.0
     # via openai
 jmespath==1.0.1
     # via
@@ -190,17 +190,17 @@ jsonpatch==1.33
     # via langchain-core
 jsonpointer==3.0.0
     # via jsonpatch
-langchain==0.3.19
+langchain==0.3.20
     # via
     #   -r requirements.in
     #   langchain-community
-langchain-aws==0.2.13
+langchain-aws==0.2.15
     # via -r requirements.in
-langchain-cohere==0.4.2
+langchain-cohere==0.4.3
     # via -r requirements.in
-langchain-community==0.3.18
+langchain-community==0.3.19
     # via langchain-cohere
-langchain-core==0.3.39
+langchain-core==0.3.45
     # via
     #   langchain
     #   langchain-aws
@@ -213,20 +213,20 @@ langchain-core==0.3.39
     #   langchain-text-splitters
 langchain-elasticsearch==0.3.2
     # via -r requirements.in
-langchain-google-vertexai==2.0.13
+langchain-google-vertexai==2.0.15
     # via -r requirements.in
-langchain-mistralai==0.2.7
+langchain-mistralai==0.2.8
     # via -r requirements.in
-langchain-openai==0.3.7
+langchain-openai==0.3.8
     # via -r requirements.in
 langchain-text-splitters==0.3.6
     # via langchain
-langsmith==0.3.11
+langsmith==0.3.15
     # via
     #   langchain
     #   langchain-community
     #   langchain-core
-langtrace-python-sdk==3.6.2
+langtrace-python-sdk==3.8.6
     # via -r requirements.in
 log-symbols==0.0.14
     # via halo
@@ -242,17 +242,16 @@ multidict==6.1.0
     #   yarl
 mypy-extensions==1.0.0
     # via typing-inspect
-numpy==2.2.3
+numpy==2.2.4
     # via
     #   elasticsearch
-    #   langchain
     #   langchain-aws
     #   langchain-community
     #   shapely
     #   transformers
-openai==1.64.0
+openai==1.66.3
     # via langchain-openai
-opentelemetry-api==1.30.0
+opentelemetry-api==1.31.0
     # via
     #   elastic-opentelemetry
     #   langtrace-python-sdk
@@ -264,31 +263,31 @@ opentelemetry-api==1.30.0
     #   opentelemetry-resourcedetector-gcp
     #   opentelemetry-sdk
     #   opentelemetry-semantic-conventions
-opentelemetry-exporter-otlp==1.30.0
+opentelemetry-exporter-otlp==1.31.0
     # via elastic-opentelemetry
-opentelemetry-exporter-otlp-proto-common==1.30.0
+opentelemetry-exporter-otlp-proto-common==1.31.0
     # via
     #   opentelemetry-exporter-otlp-proto-grpc
     #   opentelemetry-exporter-otlp-proto-http
-opentelemetry-exporter-otlp-proto-grpc==1.30.0
+opentelemetry-exporter-otlp-proto-grpc==1.31.0
     # via
     #   langtrace-python-sdk
     #   opentelemetry-exporter-otlp
-opentelemetry-exporter-otlp-proto-http==1.30.0
+opentelemetry-exporter-otlp-proto-http==1.31.0
     # via
     #   langtrace-python-sdk
     #   opentelemetry-exporter-otlp
-opentelemetry-instrumentation==0.51b0
+opentelemetry-instrumentation==0.52b0
     # via
     #   elastic-opentelemetry
     #   langtrace-python-sdk
     #   opentelemetry-instrumentation-sqlalchemy
     #   opentelemetry-instrumentation-system-metrics
-opentelemetry-instrumentation-sqlalchemy==0.51b0
+opentelemetry-instrumentation-sqlalchemy==0.52b0
     # via langtrace-python-sdk
-opentelemetry-instrumentation-system-metrics==0.51b0
+opentelemetry-instrumentation-system-metrics==0.52b0
     # via elastic-opentelemetry
-opentelemetry-proto==1.30.0
+opentelemetry-proto==1.31.0
     # via
     #   opentelemetry-exporter-otlp-proto-common
     #   opentelemetry-exporter-otlp-proto-grpc
@@ -297,7 +296,7 @@ opentelemetry-resource-detector-azure==0.1.5
     # via elastic-opentelemetry
 opentelemetry-resourcedetector-gcp==1.8.0a0
     # via elastic-opentelemetry
-opentelemetry-sdk==1.30.0
+opentelemetry-sdk==1.31.0
     # via
     #   elastic-opentelemetry
     #   langtrace-python-sdk
@@ -308,7 +307,7 @@ opentelemetry-sdk==1.30.0
     #   opentelemetry-sdk-extension-aws
 opentelemetry-sdk-extension-aws==2.1.0
     # via elastic-opentelemetry
-opentelemetry-semantic-conventions==0.51b0
+opentelemetry-semantic-conventions==0.52b0
     # via
     #   elastic-opentelemetry
     #   opentelemetry-instrumentation
@@ -332,7 +331,7 @@ propcache==0.3.0
     # via
     #   aiohttp
     #   yarl
-proto-plus==1.26.0
+proto-plus==1.26.1
     # via
     #   google-api-core
     #   google-cloud-aiplatform
@@ -347,7 +346,7 @@ protobuf==5.29.3
     #   grpcio-status
     #   opentelemetry-proto
     #   proto-plus
-psutil==6.1.1
+psutil==7.0.0
     # via opentelemetry-instrumentation-system-metrics
 pyasn1==0.6.1
     # via
@@ -373,7 +372,7 @@ pydantic-core==2.27.2
     # via
     #   cohere
     #   pydantic
-pydantic-settings==2.8.0
+pydantic-settings==2.8.1
     # via langchain-community
 python-dateutil==2.9.0.post0
     # via
@@ -411,11 +410,11 @@ requests-toolbelt==1.0.0
     # via langsmith
 rsa==4.9
     # via google-auth
-s3transfer==0.11.2
+s3transfer==0.11.4
     # via boto3
-safetensors==0.5.2
+safetensors==0.5.3
     # via transformers
-sentry-sdk==2.22.0
+sentry-sdk==2.23.1
     # via langtrace-python-sdk
 shapely==2.0.7
     # via google-cloud-aiplatform
@@ -431,14 +430,13 @@ sniffio==1.3.1
     #   openai
 spinners==0.0.24
     # via halo
-sqlalchemy==2.0.38
+sqlalchemy==2.0.39
     # via
     #   langchain
     #   langchain-community
     #   langtrace-python-sdk
 tenacity==9.0.0
     # via
-    #   langchain
     #   langchain-community
     #   langchain-core
 termcolor==2.5.0
@@ -448,7 +446,7 @@ tiktoken==0.9.0
     #   -r requirements.in
     #   langchain-openai
     #   langtrace-python-sdk
-tokenizers==0.21.0
+tokenizers==0.21.1
     # via
     #   cohere
     #   langchain-mistralai
@@ -464,7 +462,7 @@ transformers==4.49.0
     # via langtrace-python-sdk
 types-pyyaml==6.0.12.20241230
     # via langchain-cohere
-types-requests==2.32.0.20241016
+types-requests==2.32.0.20250306
     # via cohere
 typing-extensions==4.12.2
     # via
@@ -509,26 +507,26 @@ zstandard==0.23.0
 
 # The following packages are considered to be unsafe in a requirements file:
 # setuptools
-opentelemetry-instrumentation-asyncio==0.51b0
-opentelemetry-instrumentation-dbapi==0.51b0
-opentelemetry-instrumentation-logging==0.51b0
-opentelemetry-instrumentation-sqlite3==0.51b0
-opentelemetry-instrumentation-threading==0.51b0
-opentelemetry-instrumentation-urllib==0.51b0
-opentelemetry-instrumentation-wsgi==0.51b0
-opentelemetry-instrumentation-aiohttp-client==0.51b0
-opentelemetry-instrumentation-aiohttp-server==0.51b0
-opentelemetry-instrumentation-boto3sqs==0.51b0
-opentelemetry-instrumentation-botocore==0.51b0
-opentelemetry-instrumentation-click==0.51b0
-opentelemetry-instrumentation-elasticsearch==0.51b0
-opentelemetry-instrumentation-flask==0.51b0
-opentelemetry-instrumentation-grpc==0.51b0
-opentelemetry-instrumentation-httpx==0.51b0
-opentelemetry-instrumentation-jinja2==0.51b0
-opentelemetry-instrumentation-requests==0.51b0
-opentelemetry-instrumentation-sqlalchemy==0.51b0
-opentelemetry-instrumentation-system-metrics==0.51b0
-opentelemetry-instrumentation-tortoiseorm==0.51b0
-opentelemetry-instrumentation-urllib3==0.51b0
+opentelemetry-instrumentation-asyncio==0.52b0
+opentelemetry-instrumentation-dbapi==0.52b0
+opentelemetry-instrumentation-logging==0.52b0
+opentelemetry-instrumentation-sqlite3==0.52b0
+opentelemetry-instrumentation-threading==0.52b0
+opentelemetry-instrumentation-urllib==0.52b0
+opentelemetry-instrumentation-wsgi==0.52b0
+opentelemetry-instrumentation-aiohttp-client==0.52b0
+opentelemetry-instrumentation-aiohttp-server==0.52b0
+opentelemetry-instrumentation-boto3sqs==0.52b0
+opentelemetry-instrumentation-botocore==0.52b0
+opentelemetry-instrumentation-click==0.52b0
+opentelemetry-instrumentation-elasticsearch==0.52b0
+opentelemetry-instrumentation-flask==0.52b0
+opentelemetry-instrumentation-grpc==0.52b0
+opentelemetry-instrumentation-httpx==0.52b0
+opentelemetry-instrumentation-jinja2==0.52b0
+opentelemetry-instrumentation-requests==0.52b0
+opentelemetry-instrumentation-sqlalchemy==0.52b0
+opentelemetry-instrumentation-system-metrics==0.52b0
+opentelemetry-instrumentation-tortoiseorm==0.52b0
+opentelemetry-instrumentation-urllib3==0.52b0
 elastic-opentelemetry-instrumentation-openai==0.6.1
