--- a/example-apps/elasticsearch-mcp-server/package.json
+++ b/example-apps/elasticsearch-mcp-server/package.json
@@ -1,12 +1,24 @@
 {
-  "name": "@elastic/mcp-server-elasticsearch",
-  "version": "0.1.0",
+  "name": "mcp-server-elasticsearch",
+  "description": "Elasticsearch MCP Server",
+  "version": "0.1.3",
   "license": "MIT",
   "author": "Elastic",
   "type": "module",
+  "main": "dist/index.js",
+  "module": "dist/index.js",
   "bin": {
-    "mcp-server-elasticsearch": "dist/index.js"
+    "mcp-server-elasticsearch": "./dist/index.js"
   },
+  "repository": "https://github.com/elastic/elasticsearch-labs",
+  "bugs": "https://github.com/elastic/elasticsearch-labs/issues",
+  "homepage": "https://www.elastic.co/",
+  "keywords": [
+    "elasticsearch",
+    "search",
+    "mcp",
+    "mcp-server"
+  ],
   "files": [
     "dist"
   ],
@@ -25,5 +37,8 @@
     "@types/node": "^22",
     "shx": "^0.3.4",
     "typescript": "^5.6.2"
+  },
+  "engines": {
+    "node": "^18"
   }
 }
